Eating and Sleeping

--- a/style.css
+++ b/style.css
@@ -1,12 +1,57 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Default Styling*/
 div {
-  height: 10rem;
-  width: 10rem;
-  margin: 20px;
+  height: 1.5rem;
+  width: 18rem;
+  margin: 30px;
   position: relative;
-  float: left;
   background-color: #217F9C;
   border-radius: 0.5rem;
-  box-shadow: inset 0 0 0 7px rgba(255,255,255,.5)
+  box-shadow: inset 0 0 0 3px rgba(255,255,255,.5);
+  text-align: center;
+  padding-top: 10px;
+  color: white;
 }
 
 div:hover {
@@ -15,6 +60,7 @@ div:hover {
 
 
 .mac {
+  width: 20rem;
   display: block;
   border: none;
   border-radius: 20px;
