--- a/style.css
+++ b/style.css
@@ -39,10 +39,13 @@
 
 
 
+body {
+  padding: 2rem;
+}
 
 /*Default Styling*/
 div {
-  height: 1.5rem;
+  height: 5rem;
   width: 18rem;
   margin: 30px;
   position: relative;
