--- a/style.css
+++ b/style.css
@@ -13,6 +13,22 @@ div:hover {
   background: #0AF
 }
 
+a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  margin-bottom: 1rem;
+}
+
+span {
+  color: #217F9C;
+}
 
 .mac {
   display: block;
